# iu9-sql-compiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  flake.nix  query.sql
benchmarks/: CMakeLists.txt  analysis.ipynb  generate-multiway-data.sh  main.cpp  operator_cost.cpp  results-01.json  results-02.json
benchmarks/datasets/ssb/: README.md  convert_tbl_to_csv.py  schema.json  test_convert_tbl_to_csv.py  test_queries.py
benchmarks/datasets/ssb/fixtures/expected_csv/: customer.csv  date.csv  lineorder.csv  part.csv  supplier.csv
benchmarks/datasets/ssb/fixtures/tbl/: customer.tbl  date.tbl  lineorder.tbl  part.tbl  supplier.tbl
benchmarks/datasets/ssb/queries/: q1.1.sql  q1.2.sql  q1.3.sql  q2.1.sql  q2.2.sql  q2.3.sql  q3.1.sql  q3.2.sql  q3.3.sql  q3.4.sql  q4.2.sql  q4.3.sql
cmake/: FetchAntlr4.cmake  FetchBoost.cmake  FetchGBenchmark.cmake  SetupLLVM.cmake
docs/: TLexer.g4  TParser.g4
include/stewkk/sql/logic/executor/: buffer_size.hpp  channel.hpp  executor.hpp  llvm.hpp  materialization.hpp  plan.hpp  plan_serializer.hpp  sequential_scan.hpp
include/stewkk/sql/logic/implementation_rules/: implement_aggregation.hpp  implement_cross_join.hpp  implement_filter.hpp  implement_hash_join.hpp  implement_index_seek.hpp  implement_join.hpp  implement_merge_join.hpp  implement_projection.hpp  implement_table.hpp
include/stewkk/sql/logic/optimizer/: cardinality.hpp  enforcer.hpp  group.hpp  logical_expr.hpp  memo.hpp  optimizer.hpp  physical_expr.hpp  reachability.hpp  rule.hpp  rules.hpp  rules_applier.hpp  schema_catalog.hpp  sort_enforcer.hpp  winner_key.hpp
include/stewkk/sql/logic/optimizer/properties/: property.hpp  (+3 more)
include/stewkk/sql/logic/parser/: parser.hpp
include/stewkk/sql/logic/result/: error.hpp  result.hpp
include/stewkk/sql/logic/transformation_rules/: aggregation_join_transpose.hpp  aggregation_pushdown_through_join.hpp  cross_join_to_join.hpp  filter_lift_through_join.hpp  filter_merge.hpp  filter_pushdown_through_join.hpp  filter_pushdown_through_projection.hpp  filter_split.hpp  filter_to_join_predicate.hpp  in_to_or_chain.hpp  join_associativity.hpp  join_commutativity.hpp  outer_join_to_inner.hpp  predicate_utils.hpp  projection_pushdown_through_join.hpp
include/stewkk/sql/models/executor/: tuple.hpp
include/stewkk/sql/models/parser/: expression.hpp  join_type.hpp  relational_algebra_ast.hpp
include/stewkk/sql/utils/: log.hpp  not_null.hpp  output_dot_plans.hpp  overloaded.hpp
report/: Makefile  beamerthemeIU9light.sty  biblio.bib  cascades.dot  dbms_scheme.puml  dbms_scheme_impl.puml  header.tex  practice.tex  presentation-vkr.tex  presentation.tex  report.tex  thesis.tex  vkr.tex
report/listings/: grammar1.g4  grammar2.g4  grammar3.g4  grammar4.g4  grammar5.g4  ir_generator.cpp  jit_compiler_constructor.cpp
research/: benchmarks.ipynb  converter.py  cost-on-random.ipynb  cost-stats.csv  docker-compose.yaml  dump_plan.py  extractor.py  ms-sql-rules-list.txt  ms_sql_server_extractor.py  query_generator.py  research.ipynb  rule-lineage-random-1000-samples.csv  rule-lineage-random-1000-summary.csv  show_rules.sql  test_converter.py  tmp.py
research/benchmark-results/: operator-cost-matched.json  operator-cost.json  query.json  ssb-sf001.json  ssb-sf01.json
research/fuzz/: cost_stats.py  diff_fuzz.py  mssql_runner.py  reach_fuzz.py  test_diff_fuzz.py
research/ms-server-plans/: cross_join.xml  filter_and.xml  filter_eq.xml  filter_gt.xml  filter_lt.xml  filter_not.xml  filter_or.xml  inner_join.xml  join_compound_predicate.xml  join_with_filter.xml  left_join.xml  seq_scan.xml
research/ms-server-plans/fuzz/: group_by.xml  group_order.xml  in_filter.xml  order_by.xml  string_filter.xml
src/stewkk/sql/: CMakeLists.txt  main.cpp  some_test.cpp
src/stewkk/sql/logic/: llvm_ir_builder.cpp  llvm_ir_builder.hpp
src/stewkk/sql/logic/executor/: executor.cpp  executor_test.cpp  llvm.cpp  materialization.cpp  plan.cpp  plan_serializer.cpp  plan_serializer_test.cpp  sequential_scan.cpp
src/stewkk/sql/logic/implementation_rules/: implement_aggregation.cpp  implement_cross_join.cpp  implement_filter.cpp  implement_hash_join.cpp  implement_index_seek.cpp  implement_join.cpp  implement_merge_join.cpp  implement_projection.cpp  implement_table.cpp
src/stewkk/sql/logic/optimizer/: cardinality.cpp  group.cpp  memo.cpp  memo_test.cpp  optimizer.cpp  optimizer_test.cpp  reachability.cpp  rule.cpp  rule_test.cpp  rules.cpp  rules_applier.cpp  rules_applier_test.cpp  schema_catalog.cpp  sort_enforcer.cpp  winner_key.cpp
src/stewkk/sql/logic/optimizer/properties/: properties_test.cpp  property_set.cpp  sort_order.cpp  sort_property.cpp
src/stewkk/sql/logic/parser/: PostgreSQLLexer.g4  PostgreSQLLexerBase.cpp  PostgreSQLParser.g4  parser.cpp  parser_test.cpp  visitor.cpp  visitor.hpp
src/stewkk/sql/logic/result/: error.cpp  result.cpp
src/stewkk/sql/logic/transformation_rules/: aggregation_join_transpose.cpp  aggregation_pushdown_through_join.cpp  cross_join_to_join.cpp  filter_lift_through_join.cpp  filter_merge.cpp  filter_pushdown_through_join.cpp  filter_pushdown_through_projection.cpp  filter_split.cpp  filter_to_join_predicate.cpp  in_to_or_chain.cpp  join_associativity.cpp  join_commutativity.cpp  outer_join_to_inner.cpp  predicate_utils.cpp  projection_pushdown_through_join.cpp
src/stewkk/sql/models/executor/: tuple.cpp
src/stewkk/sql/models/parser/: expression.cpp  join_type.cpp  relational_algebra_ast.cpp
src/stewkk/sql/utils/: non_null.cpp  output_dot_plans.cpp
test/: CMakeLists.txt
test/static/executor/: README.md  expected_complex_join.txt  expected_inner_join.txt  expected_left_join.txt  expected_right_join.txt
test/static/executor/test_data/: books.csv  customers.csv  departments.csv  departments_1000.csv  departments_16000.csv  departments_2000.csv  departments_4000.csv  departments_8000.csv  employees.csv  employees_200.csv  markets.csv  orders.csv  regions.csv  users.csv
test/static/parser/: expected.dot  expected_arithmetical.dot  expected_join.dot  expected_outer_join.dot
